made swagger documentation for permission and project handlers
