# internal/dto/createProjectRequest.go
@@ -1,0 +1,6 @@
+package dto
+
+type CreateProjectRequest struct {
+	Name        string `json:"name" example:"Написать API"`
+	Description string `json:"description" example:"описание проекта"`
+}
